<resources>
    <string name="app_name">闪讯机器人</string>
    <string name="exception_exit">出现错误，请重新打开App</string>
    <string name="verify">验证</string>
    <string name="ignore">忽略</string>

    <string name="config_server_url">　服务器地址：</string>
    <string name="config_server_url_hint">e.g. http://192.168.1.1:8079/</string>

    <string name="config_verify_ssl">　验证SSL证书：</string>

    <string name="config_network_interface">　网络接口：</string>
    <string name="config_network_interface_hint">e.g. wan</string>
    <string name="config_network_interface_text">wan</string>

    <string name="config_server_type">　服务端类型：</string>
    <string name="config_server_type_luci_rpc">Luci RPC</string>
    <string name="config_server_type_restful_api">RESTful API</string>

    <string name="config_username">　路由器用户名：</string>
    <string name="config_username_hint">e.g. root</string>
    <string name="config_username_text">root</string>

    <string name="config_password">　路由器密码：</string>
    <string name="config_password_hint">e.g. 123456</string>

    <string name="config_auth_token">　通讯密钥：</string>
    <string name="config_auth_token_hint">e.g. 123456</string>

    <string name="config_sim_card">　SIM卡选择：</string>
    <string name="config_sim_card_default">默认</string>
    <string name="config_sim_card_1">卡1</string>
    <string name="config_sim_card_2">卡2</string>

    <string name="config_interval">　定时间隔：</string>
    <string name="config_interval_hint">e.g. 28</string>
    <string name="config_interval_text">28</string>
    <string name="config_interval_unit">小时</string>

    <string name="config_clear">清空</string>
    <string name="config_test">测试服务器</string>
    <string name="config_save">保存并退出</string>

    <string name="main_config">服务器配置</string>
    <string name="main_send">立即更新密码</string>
    <string name="main_alarm">注册定时任务</string>
    <string name="main_cancel">取消定时任务</string>
    <string name="main_update">手动更新用户名及密码</string>
    <string name="main_clear_log">清空日志</string>
    <string name="main_panel_config">配置面板</string>
    <string name="main_panel_primary">主面板</string>
    <string name="main_panel_debug">调试面板</string>
    <string name="main_panel_log">日志面板</string>
    <string name="singlenet_username">闪讯用户名：</string>
    <string name="singlenet_username_hint">@GDCH.XY</string>
    <string name="singlenet_password">　闪讯密码：</string>
</resources>
